add_executable(evse evse.c
	$<TARGET_OBJECTS:ether>
	../mme/EthernetHeader.c
	../mme/HomePlugHeader1.c
	../mme/UnwantedMessage.c
	../mme/readmessage.c
	../mme/sendmessage.c
	$<TARGET_OBJECTS:plc>
	../slac/evse_cm_atten_char.c
	../slac/evse_cm_mnbc_sound.c
	../slac/evse_cm_set_key.c
	../slac/evse_cm_slac_match.c
	../slac/evse_cm_slac_param.c
	../slac/evse_cm_start_atten_char.c
	../slac/slac_debug.c
	../slac/slac_session.c
	$<TARGET_OBJECTS:tools>
	)
add_executable(pev pev.c
	$<TARGET_OBJECTS:ether>
	../mme/EthernetHeader.c
	../mme/HomePlugHeader1.c
	../mme/UnwantedMessage.c
	../mme/readmessage.c
	../mme/sendmessage.c
	$<TARGET_OBJECTS:plc>
	../slac/pev_cm_atten_char.c
	../slac/pev_cm_mnbc_sound.c
	../slac/pev_cm_set_key.c
	../slac/pev_cm_slac_match.c
	../slac/pev_cm_slac_param.c
	../slac/pev_cm_start_atten_char.c
	../slac/slac_connect.c
	../slac/slac_debug.c
	../slac/slac_session.c
	$<TARGET_OBJECTS:tools>
	)
