add_library(lib_tools STATIC
    assist.c
    b64dump.c
    basespec.c
    binout.c
    bytespec.c
    checkfilename.c
    checksum32.c
    chrout.c
    codelist.c
    config.c
    dataspec.c
    decdecode.c
    decout.c
    decstring.c
    desuid.c
    efreopen.c
    emalloc.c
    error.c
    fdchecksum32.c
    getargv.c
    getoptv.c
    hexdecode.c
    hexdump.c
    hexencode.c
    hexload.c
    hexoffset.c
    hexout.c
    hexpeek.c
    hexstring.c
    hexview.c
    ipv4spec.c
    ipv6spec.c
    lookup.c
    memencode.c
    memincr.c
    memout.c
    memswap.c
    output.c
    putoptv.c
    reword.c
    set32bitmap.c
    strfbits.c
    strincr.c
    synonym.c
    todigit.c
    typename.c
    uintspec.c
    version.c
    )
